# walker_bot

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
include/: walker.hpp
launch/: all.launch
result/: cppcheck.txt  cpplint.txt
src/: main.cpp  walker.cpp
world/: circle  myworld
